<resources>
    <string name="app_name">Insurance Premium Calculator</string>
    <string name="title">Insurance Premium Calculator</string>
    <string name="age">Age</string>
    <string name="Gender">Gender</string>
    <string name="smoker">Smoker</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="yes">yes</string>
    <string name="total">Total Premium</string>
    <string name="calculate">Calculate</string>
    <string name="reset">Reset</string>
    <string-array name="ages">
        <item>less than 17</item>
        <item>17-25</item>
        <item>26-30</item>
        <item>31-40</item>
        <item>41-55</item>
        <item>more than 55</item>
    </string-array>
</resources>
